<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BCHA Formulary</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search by generic or brand name</string>
    <string name="button_search">Search</string>
    <string name="title">BC Health Authorities</string>
    <string name="formulary">FORMULARY</string>
    <string name="image_description_logo">LMPS logo</string>
    <string name="title_activity_display_formulary_result">DisplayFormularyResult</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_restricted_result">DisplayRestrictedResult</string>
    <string name="title_activity_display_excluded_result">DisplayExcludedResult</string>
    <string name="brandname">Brand Names:</string>
    <string name="strengths">Common Strengths:</string>
    <string name="strengths_cont">(May not be available at all sites)</string>
    <string name="title_activity_display_excluded">DisplayExcludedActivity</string>
    <string name="status">Status:</string>
    <string name="formulary_status">Status: \n\t\tFORMULARY</string>
    <string name="excluded">EXCLUDED</string>
    <string name="excluded_reason">Reason for Exclusion:</string>
    <string name="excluded_descrip_header">Excluded Description:</string>
    <string name="excluded_description">Excluded drugs have been assessed by the B.C. Health Authorities Pharmacy and Therapeutics Committee and intentionally excluded from the formulary based on the following reasons: the product has not been shown to be more effective and/or safe than current formulary alternatives, is unavailable or discontinued by the manufacturer, has unfavorable cost-benefit profile, or other specific reason.</string>
    <string name="excluded_description2">Patients may be instructed to provide their own medication in these cases as these drugs are not stocked in hospital. In exceptional cases, excluded drugs may be supplied by pharmacy if deemed appropriate after assessment by pharmacy manager and/or clinical pharmacist.</string>
    <string name="title_activity_display_other_result">DisplayOtherResult</string>
    <string name="spelling">Spelling</string>
    <string name="drugnotfound">Drug Not Found</string>
    <string name="display_table">Download Formulary</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="button_description_help">Help Button</string>
    <string name="review_pending">This drug appears to be non-formulary. It may be undergoing a formal review to be included on Formulary at a later time</string>
    <string name="helptitle">About This App</string>
    <string name="maillink"><a href="mailto:anthony.tung@fraserhealth.ca?subject=formulary app question">anthony.tung@fraserhealth.ca</a></string>
    <string name="greetings_message">Welcome to the BCHA Formulary</string>
    <string name="password_helper">Input keyphrase to continue</string>
    <string name="authorize">Authorize my device</string>
    <string name="loading">Loading...</string>

</resources>
