<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#005293"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/formulary"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@null"
        android:contentDescription="@string/button_description_help"
        android:onClick="displayHelp"
        android:src="@drawable/text2993" />

    <EditText
        android:id="@+id/search_input"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="@drawable/edittext_rounded_corners"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:padding="5dp" >
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="displayResult"
        android:text="@string/button_search" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/image_description_logo"
        android:src="@drawable/lmps_logo" />

</LinearLayout>