<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity = "center"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/greetings_message"/>

    <EditText
        android:id="@+id/keyphrase_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/password_helper"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" />

    <Button
        android:id="@+id/authorizeButton"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/authorize"
		android:onClick="authorizeDevice" />

</LinearLayout>
