<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.lowermainlandpharmacyservices.lmpsformulary.DisplayFormularyResult" >

    <TextView
        android:id="@+id/formulary_drug_genericname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#005293"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:paddingLeft="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/generic_or_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/formulary_brandnames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/formulary_status"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:text="@string/strengths"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/strengths_cont"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/formulary_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>
    </ScrollView>

</LinearLayout>